--- a/style.css
+++ b/style.css
@@ -21,6 +21,11 @@ body {
     height: 480px;
     perspective: 1000px;
     cursor: grab;
+
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
 }
 
 .card-container:active {
@@ -106,6 +111,12 @@ body {
     border-radius: 12px;
     object-fit: cover;
     z-index: 1;
+
+    -webkit-user-drag: none;
+    -khtml-user-drag: none;
+    -moz-user-drag: none;
+    -o-user-drag: none;
+    user-drag: none;
 }
 
 .card-title {
